--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ dist/*
 ez_plant/static/plant_images/*.jpeg
 ez_plant/static/plant_images/*.png
 ez_plant/static/plant_images/*.jpg
+ez_plant/static/plant_images/*.ico
